...
        case pdf
        case detail
        
        var title: String {
            switch self{
            case .pdf:
                return "PDF 상세보기"
            case .detail:
                return "더보기"
            }
        }
    }
    public let contentType: WebViewContentType
...
