...
                button.setImage(img, for: .normal)
                button.setTitle(type.title, for: .normal)
                button.setTitleColor(.defaultFont, for: .normal)
                button.imageEdgeInsets = UIEdgeInsets(top: 0, left: -10, bottom: 0, right: 0)
                button.addTarget(target, action: selector, for: .touchUpInside)
                button.frame.size.width = 60
                leftItem.accessibilityIdentifier = "navi_back"
                leftItem.customView = button
            }
            leftItem.style = .plain
            leftItem.tintColor = .defaultFont
            navigationItem.hidesBackButton = true
            navigationItem.leftBarButtonItem = leftItem
...
